tests/ucc/type/bad/no-ptr-vs-struct-member.c
struct a
{
    int b;
};

int main(void)
{
    struct a a;

    a->b = 0;

    return 0;
}
